--- a/somabout.html
+++ b/somabout.html
@@ -1,62 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>О СУХОМ ОБЕЗЖИРЕННОМ МОЛОКЕ</title>
+	<title>Рћ РЎРЈРҐРћРњ РћР‘Р•Р—Р–РР Р•РќРќРћРњ РњРћР›РћРљР•</title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
+	<meta content="РћРїС‚РѕРІР°СЏ РїСЂРѕРґР°Р¶Р° СЃСѓС…РѕРіРѕ С†РµР»СЊРЅРѕРіРѕ Рё СЃСѓС…РѕРіРѕ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РјРѕР»РѕРєР°" name="description">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>РџРѕСЃС‚Р°РІС‰РёРє СЃС‹СЂСЊСЏ РґР»СЏ РїРёС‰РµРІРѕРіРѕ РїСЂРѕРёР·РІРѕРґСЃС‚РІР°</strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
+				<a href="index.html">Р“Р»Р°РІРЅР°СЏ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">РџСЂР°Р№СЃ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">РљРѕРЅС‚Р°РєС‚С‹</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">Рћ РЅР°СЃ</a>
 			</nav>
 		</div>
 		<div id="sidebar">
-			<h1>МОЛОКО СУХОЕ ОБЕЗЖИРЕННОЕ</h1>
+			<h1>РњРћР›РћРљРћ РЎРЈРҐРћР• РћР‘Р•Р—Р–РР Р•РќРќРћР•</h1>
 		</div>
 		
 		<article>
-			<h2>ОПИСАНИЕ ПРОДУКТА</h2>
+			<h2>РћРџРРЎРђРќРР• РџР РћР”РЈРљРўРђ</h2>
 			<div id="of1">
-				<p id="sh1">Обезжиренное сухое молоко - это порошок белого или кремового цвета, получаемый путем высушивания обезжиренного коровьего молока. Продукт используется для потребления населением в местах, куда доставка натуральной молочной продукции затруднена, а также в пищевой промышленности и некоторых других сферах. Характеристики сухого молока строго регламентированы стандартом ГОСТ Р 52791-2007.</p>
-				<h2>ПОЛЕЗНЫЕ СВОЙСТВА</h2><img align="left" alt="МОЛОКО СУХОЕ ОБЕЗЖИРЕННОЕ" height="150" hspace="15" src="images/moloko4.jpg" vspace="5" width="150">
-				<p id="sh1">Интересно, что после соответствующей обработки сухое обезжиренное молоко сохраняет все свои полезные свойства. В нем остается полный витаминный комплекс: А, С, В, Н, D, РР, Е, а также все полезные минералы, которые находились в исходном сырье. Среди них есть: йод и марганец, железо и селен, натрий, фосфор, магний и другие элементы. А по содержанию кальция молоко превосходит все известные в природе продукты. Также в высушенном продукте очень мало холестерина, поэтому его смело могут употреблять в пищу люди, страдающие повышенным давлением и различными сердечными заболеваниями. Кроме того, в нем огромное количество белка, нужного для строения мышечной ткани. Возможно, поэтому молоко - это продукт, который в первую очередь дают маленьким детям. А еще в нем есть такие аминокислоты, которые просто необходимы организму для нормального протекания многих процессов синтеза. Обладая такими показателями, сухой продукт часто используется для искусственного наращивания мышечной массы. Правда, употреблять его нужно в ограниченных количествах (мужчинам - от 200 до 250 грамм, а женщинам - от 100 до 150 грамм в сутки).</p>
-				<h2>ПРОЦЕСС ИЗГОТОВЛЕНИЯ ПРОДУКТА</h2><img align="right" alt="ПРОИЗВОДСТВО СУХОГО МОЛОКА" height="240" hspace="15" src="images/proizvodstvo.jpg" vspace="5" width="155">
-				<p id="sh1">Производство включает в себя несколько стадий, проходя через которые, обычный сельскохозяйственный продукт превращается в готовый товар. Таких этапов всего семь:</p>
+				<p id="sh1">РћР±РµР·Р¶РёСЂРµРЅРЅРѕРµ СЃСѓС…РѕРµ РјРѕР»РѕРєРѕ - СЌС‚Рѕ РїРѕСЂРѕС€РѕРє Р±РµР»РѕРіРѕ РёР»Рё РєСЂРµРјРѕРІРѕРіРѕ С†РІРµС‚Р°, РїРѕР»СѓС‡Р°РµРјС‹Р№ РїСѓС‚РµРј РІС‹СЃСѓС€РёРІР°РЅРёСЏ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРіРѕ РєРѕСЂРѕРІСЊРµРіРѕ РјРѕР»РѕРєР°. РџСЂРѕРґСѓРєС‚ РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РґР»СЏ РїРѕС‚СЂРµР±Р»РµРЅРёСЏ РЅР°СЃРµР»РµРЅРёРµРј РІ РјРµСЃС‚Р°С…, РєСѓРґР° РґРѕСЃС‚Р°РІРєР° РЅР°С‚СѓСЂР°Р»СЊРЅРѕР№ РјРѕР»РѕС‡РЅРѕР№ РїСЂРѕРґСѓРєС†РёРё Р·Р°С‚СЂСѓРґРЅРµРЅР°, Р° С‚Р°РєР¶Рµ РІ РїРёС‰РµРІРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё Рё РЅРµРєРѕС‚РѕСЂС‹С… РґСЂСѓРіРёС… СЃС„РµСЂР°С…. РҐР°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё СЃСѓС…РѕРіРѕ РјРѕР»РѕРєР° СЃС‚СЂРѕРіРѕ СЂРµРіР»Р°РјРµРЅС‚РёСЂРѕРІР°РЅС‹ СЃС‚Р°РЅРґР°СЂС‚РѕРј Р“РћРЎРў Р  52791-2007.</p>
+				<h2>РџРћР›Р•Р—РќР«Р• РЎР’РћР™РЎРўР’Рђ</h2><img align="left" alt="РњРћР›РћРљРћ РЎРЈРҐРћР• РћР‘Р•Р—Р–РР Р•РќРќРћР•" height="150" hspace="15" src="images/moloko4.jpg" vspace="5" width="150">
+				<p id="sh1">РРЅС‚РµСЂРµСЃРЅРѕ, С‡С‚Рѕ РїРѕСЃР»Рµ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РµР№ РѕР±СЂР°Р±РѕС‚РєРё СЃСѓС…РѕРµ РѕР±РµР·Р¶РёСЂРµРЅРЅРѕРµ РјРѕР»РѕРєРѕ СЃРѕС…СЂР°РЅСЏРµС‚ РІСЃРµ СЃРІРѕРё РїРѕР»РµР·РЅС‹Рµ СЃРІРѕР№СЃС‚РІР°. Р’ РЅРµРј РѕСЃС‚Р°РµС‚СЃСЏ РїРѕР»РЅС‹Р№ РІРёС‚Р°РјРёРЅРЅС‹Р№ РєРѕРјРїР»РµРєСЃ: Рђ, РЎ, Р’, Рќ, D, Р Р , Р•, Р° С‚Р°РєР¶Рµ РІСЃРµ РїРѕР»РµР·РЅС‹Рµ РјРёРЅРµСЂР°Р»С‹, РєРѕС‚РѕСЂС‹Рµ РЅР°С…РѕРґРёР»РёСЃСЊ РІ РёСЃС…РѕРґРЅРѕРј СЃС‹СЂСЊРµ. РЎСЂРµРґРё РЅРёС… РµСЃС‚СЊ: Р№РѕРґ Рё РјР°СЂРіР°РЅРµС†, Р¶РµР»РµР·Рѕ Рё СЃРµР»РµРЅ, РЅР°С‚СЂРёР№, С„РѕСЃС„РѕСЂ, РјР°РіРЅРёР№ Рё РґСЂСѓРіРёРµ СЌР»РµРјРµРЅС‚С‹. Рђ РїРѕ СЃРѕРґРµСЂР¶Р°РЅРёСЋ РєР°Р»СЊС†РёСЏ РјРѕР»РѕРєРѕ РїСЂРµРІРѕСЃС…РѕРґРёС‚ РІСЃРµ РёР·РІРµСЃС‚РЅС‹Рµ РІ РїСЂРёСЂРѕРґРµ РїСЂРѕРґСѓРєС‚С‹. РўР°РєР¶Рµ РІ РІС‹СЃСѓС€РµРЅРЅРѕРј РїСЂРѕРґСѓРєС‚Рµ РѕС‡РµРЅСЊ РјР°Р»Рѕ С…РѕР»РµСЃС‚РµСЂРёРЅР°, РїРѕСЌС‚РѕРјСѓ РµРіРѕ СЃРјРµР»Рѕ РјРѕРіСѓС‚ СѓРїРѕС‚СЂРµР±Р»СЏС‚СЊ РІ РїРёС‰Сѓ Р»СЋРґРё, СЃС‚СЂР°РґР°СЋС‰РёРµ РїРѕРІС‹С€РµРЅРЅС‹Рј РґР°РІР»РµРЅРёРµРј Рё СЂР°Р·Р»РёС‡РЅС‹РјРё СЃРµСЂРґРµС‡РЅС‹РјРё Р·Р°Р±РѕР»РµРІР°РЅРёСЏРјРё. РљСЂРѕРјРµ С‚РѕРіРѕ, РІ РЅРµРј РѕРіСЂРѕРјРЅРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ Р±РµР»РєР°, РЅСѓР¶РЅРѕРіРѕ РґР»СЏ СЃС‚СЂРѕРµРЅРёСЏ РјС‹С€РµС‡РЅРѕР№ С‚РєР°РЅРё. Р’РѕР·РјРѕР¶РЅРѕ, РїРѕСЌС‚РѕРјСѓ РјРѕР»РѕРєРѕ - СЌС‚Рѕ РїСЂРѕРґСѓРєС‚, РєРѕС‚РѕСЂС‹Р№ РІ РїРµСЂРІСѓСЋ РѕС‡РµСЂРµРґСЊ РґР°СЋС‚ РјР°Р»РµРЅСЊРєРёРј РґРµС‚СЏРј. Рђ РµС‰Рµ РІ РЅРµРј РµСЃС‚СЊ С‚Р°РєРёРµ Р°РјРёРЅРѕРєРёСЃР»РѕС‚С‹, РєРѕС‚РѕСЂС‹Рµ РїСЂРѕСЃС‚Рѕ РЅРµРѕР±С…РѕРґРёРјС‹ РѕСЂРіР°РЅРёР·РјСѓ РґР»СЏ РЅРѕСЂРјР°Р»СЊРЅРѕРіРѕ РїСЂРѕС‚РµРєР°РЅРёСЏ РјРЅРѕРіРёС… РїСЂРѕС†РµСЃСЃРѕРІ СЃРёРЅС‚РµР·Р°. РћР±Р»Р°РґР°СЏ С‚Р°РєРёРјРё РїРѕРєР°Р·Р°С‚РµР»СЏРјРё, СЃСѓС…РѕР№ РїСЂРѕРґСѓРєС‚ С‡Р°СЃС‚Рѕ РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РґР»СЏ РёСЃРєСѓСЃСЃС‚РІРµРЅРЅРѕРіРѕ РЅР°СЂР°С‰РёРІР°РЅРёСЏ РјС‹С€РµС‡РЅРѕР№ РјР°СЃСЃС‹. РџСЂР°РІРґР°, СѓРїРѕС‚СЂРµР±Р»СЏС‚СЊ РµРіРѕ РЅСѓР¶РЅРѕ РІ РѕРіСЂР°РЅРёС‡РµРЅРЅС‹С… РєРѕР»РёС‡РµСЃС‚РІР°С… (РјСѓР¶С‡РёРЅР°Рј - РѕС‚ 200 РґРѕ 250 РіСЂР°РјРј, Р° Р¶РµРЅС‰РёРЅР°Рј - РѕС‚ 100 РґРѕ 150 РіСЂР°РјРј РІ СЃСѓС‚РєРё).</p>
+				<h2>РџР РћР¦Р•РЎРЎ РР—Р“РћРўРћР’Р›Р•РќРРЇ РџР РћР”РЈРљРўРђ</h2><img align="right" alt="РџР РћРР—Р’РћР”РЎРўР’Рћ РЎРЈРҐРћР“Рћ РњРћР›РћРљРђ" height="240" hspace="15" src="images/proizvodstvo.jpg" vspace="5" width="155">
+				<p id="sh1">РџСЂРѕРёР·РІРѕРґСЃС‚РІРѕ РІРєР»СЋС‡Р°РµС‚ РІ СЃРµР±СЏ РЅРµСЃРєРѕР»СЊРєРѕ СЃС‚Р°РґРёР№, РїСЂРѕС…РѕРґСЏ С‡РµСЂРµР· РєРѕС‚РѕСЂС‹Рµ, РѕР±С‹С‡РЅС‹Р№ СЃРµР»СЊСЃРєРѕС…РѕР·СЏР№СЃС‚РІРµРЅРЅС‹Р№ РїСЂРѕРґСѓРєС‚ РїСЂРµРІСЂР°С‰Р°РµС‚СЃСЏ РІ РіРѕС‚РѕРІС‹Р№ С‚РѕРІР°СЂ. РўР°РєРёС… СЌС‚Р°РїРѕРІ РІСЃРµРіРѕ СЃРµРјСЊ:</p>
 				<ol id="sh1">
-					<li>Приемка сырья. Молоко, привезенное с фермы, подогревают до 40 градусов, а затем направляют на очистку, где оно освобождается от возможных примесей.</li>
-					<li>Нормализация. Очищенное сырье поступает в сепаратор, где происходит отделение СОМа от сливок.</li>
-					<li>Пастеризация и охлаждение. Обезжиренная часть молока сначала нагревается до 85 градусов, а затем охлаждается.</li>
-					<li>Сгущение. Промежуточный продукт поступает в вакуумный аппарат, где происходит выпаривание влаги до содержания сухих веществ 40-48 процентов.</li>
-					<li>Гомогенизация. Масса нагревается до 60 градусов для получения однородной консистенции.</li>
-					<li>Сушка. «Сгущенка» с помощью насоса нагнетается в сушильную камеру.</li>
-					<li>Упаковка. Готовый продукт фасуется в упаковочную тару.</li>
+					<li>РџСЂРёРµРјРєР° СЃС‹СЂСЊСЏ. РњРѕР»РѕРєРѕ, РїСЂРёРІРµР·РµРЅРЅРѕРµ СЃ С„РµСЂРјС‹, РїРѕРґРѕРіСЂРµРІР°СЋС‚ РґРѕ 40 РіСЂР°РґСѓСЃРѕРІ, Р° Р·Р°С‚РµРј РЅР°РїСЂР°РІР»СЏСЋС‚ РЅР° РѕС‡РёСЃС‚РєСѓ, РіРґРµ РѕРЅРѕ РѕСЃРІРѕР±РѕР¶РґР°РµС‚СЃСЏ РѕС‚ РІРѕР·РјРѕР¶РЅС‹С… РїСЂРёРјРµСЃРµР№.</li>
+					<li>РќРѕСЂРјР°Р»РёР·Р°С†РёСЏ. РћС‡РёС‰РµРЅРЅРѕРµ СЃС‹СЂСЊРµ РїРѕСЃС‚СѓРїР°РµС‚ РІ СЃРµРїР°СЂР°С‚РѕСЂ, РіРґРµ РїСЂРѕРёСЃС…РѕРґРёС‚ РѕС‚РґРµР»РµРЅРёРµ РЎРћРњР° РѕС‚ СЃР»РёРІРѕРє.</li>
+					<li>РџР°СЃС‚РµСЂРёР·Р°С†РёСЏ Рё РѕС…Р»Р°Р¶РґРµРЅРёРµ. РћР±РµР·Р¶РёСЂРµРЅРЅР°СЏ С‡Р°СЃС‚СЊ РјРѕР»РѕРєР° СЃРЅР°С‡Р°Р»Р° РЅР°РіСЂРµРІР°РµС‚СЃСЏ РґРѕ 85 РіСЂР°РґСѓСЃРѕРІ, Р° Р·Р°С‚РµРј РѕС…Р»Р°Р¶РґР°РµС‚СЃСЏ.</li>
+					<li>РЎРіСѓС‰РµРЅРёРµ. РџСЂРѕРјРµР¶СѓС‚РѕС‡РЅС‹Р№ РїСЂРѕРґСѓРєС‚ РїРѕСЃС‚СѓРїР°РµС‚ РІ РІР°РєСѓСѓРјРЅС‹Р№ Р°РїРїР°СЂР°С‚, РіРґРµ РїСЂРѕРёСЃС…РѕРґРёС‚ РІС‹РїР°СЂРёРІР°РЅРёРµ РІР»Р°РіРё РґРѕ СЃРѕРґРµСЂР¶Р°РЅРёСЏ СЃСѓС…РёС… РІРµС‰РµСЃС‚РІ 40-48 РїСЂРѕС†РµРЅС‚РѕРІ.</li>
+					<li>Р“РѕРјРѕРіРµРЅРёР·Р°С†РёСЏ. РњР°СЃСЃР° РЅР°РіСЂРµРІР°РµС‚СЃСЏ РґРѕ 60 РіСЂР°РґСѓСЃРѕРІ РґР»СЏ РїРѕР»СѓС‡РµРЅРёСЏ РѕРґРЅРѕСЂРѕРґРЅРѕР№ РєРѕРЅСЃРёСЃС‚РµРЅС†РёРё.</li>
+					<li>РЎСѓС€РєР°. В«РЎРіСѓС‰РµРЅРєР°В» СЃ РїРѕРјРѕС‰СЊСЋ РЅР°СЃРѕСЃР° РЅР°РіРЅРµС‚Р°РµС‚СЃСЏ РІ СЃСѓС€РёР»СЊРЅСѓСЋ РєР°РјРµСЂСѓ.</li>
+					<li>РЈРїР°РєРѕРІРєР°. Р“РѕС‚РѕРІС‹Р№ РїСЂРѕРґСѓРєС‚ С„Р°СЃСѓРµС‚СЃСЏ РІ СѓРїР°РєРѕРІРѕС‡РЅСѓСЋ С‚Р°СЂСѓ.</li>
 				</ol>
-				<h2>ПРИМЕНЕНИЕ ПРОДУКТА</h2>
+				<h2>РџР РРњР•РќР•РќРР• РџР РћР”РЈРљРўРђ</h2>
 				<ul id="sh1">
-					<li>Изготовление производных молочных продуктов в пищевой промышленности;</li>
-					<li>Приготовление детских молочных смесей и каш, которые используются для прикорма или в качестве замены грудному вскармливанию;</li>
-					<li>Изготовление йогуртов, заквасок, творога и творожных продуктов;</li>
-					<li>Применение в кондитерской промышленности как компонент готовых продуктов питания, десертов и т.п.;</li>
-					<li>Изготовление сладкого сгущенного молока и продукции из него;</li>
-					<li>Приготовление мороженого и десертов из него;</li>
-					<li>В качестве добавки в ароматизаторы, стабилизаторы, загустители и другие компоненты, которые используются в пищевой промышленности;</li>
-					<li>Как компонент в хлебобулочных изделиях;</li>
-					<li>В масложировой промышленности для изготовления сливочного масла и комбинированных масел, в состав которых входят растительные и животные жиры;</li>
-					<li>Для приготовления готовых кормов для домашних животных в сельском хозяйстве;</li>
-					<li>Для приготовления молочных напитков;</li>
-					<li>В алкогольной промышленности для приготовления напитков на основе молока;</li>
-					<li>Для изготовления плавленых сыров, глазированных сырков и другой подобной продукции;</li>
-					<li>В мясной промышленности для изготовления консервов;</li>
-					<li>Для приготовления замороженных продуктов и полуфабрикатов;</li>
-					<li>В заведениях общественного питания для приготовления супов, закусок, кремов, соусов и готовых блюд с большим количеством компонентов.</li>
+					<li>РР·РіРѕС‚РѕРІР»РµРЅРёРµ РїСЂРѕРёР·РІРѕРґРЅС‹С… РјРѕР»РѕС‡РЅС‹С… РїСЂРѕРґСѓРєС‚РѕРІ РІ РїРёС‰РµРІРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё;</li>
+					<li>РџСЂРёРіРѕС‚РѕРІР»РµРЅРёРµ РґРµС‚СЃРєРёС… РјРѕР»РѕС‡РЅС‹С… СЃРјРµСЃРµР№ Рё РєР°С€, РєРѕС‚РѕСЂС‹Рµ РёСЃРїРѕР»СЊР·СѓСЋС‚СЃСЏ РґР»СЏ РїСЂРёРєРѕСЂРјР° РёР»Рё РІ РєР°С‡РµСЃС‚РІРµ Р·Р°РјРµРЅС‹ РіСЂСѓРґРЅРѕРјСѓ РІСЃРєР°СЂРјР»РёРІР°РЅРёСЋ;</li>
+					<li>РР·РіРѕС‚РѕРІР»РµРЅРёРµ Р№РѕРіСѓСЂС‚РѕРІ, Р·Р°РєРІР°СЃРѕРє, С‚РІРѕСЂРѕРіР° Рё С‚РІРѕСЂРѕР¶РЅС‹С… РїСЂРѕРґСѓРєС‚РѕРІ;</li>
+					<li>РџСЂРёРјРµРЅРµРЅРёРµ РІ РєРѕРЅРґРёС‚РµСЂСЃРєРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё РєР°Рє РєРѕРјРїРѕРЅРµРЅС‚ РіРѕС‚РѕРІС‹С… РїСЂРѕРґСѓРєС‚РѕРІ РїРёС‚Р°РЅРёСЏ, РґРµСЃРµСЂС‚РѕРІ Рё С‚.Рї.;</li>
+					<li>РР·РіРѕС‚РѕРІР»РµРЅРёРµ СЃР»Р°РґРєРѕРіРѕ СЃРіСѓС‰РµРЅРЅРѕРіРѕ РјРѕР»РѕРєР° Рё РїСЂРѕРґСѓРєС†РёРё РёР· РЅРµРіРѕ;</li>
+					<li>РџСЂРёРіРѕС‚РѕРІР»РµРЅРёРµ РјРѕСЂРѕР¶РµРЅРѕРіРѕ Рё РґРµСЃРµСЂС‚РѕРІ РёР· РЅРµРіРѕ;</li>
+					<li>Р’ РєР°С‡РµСЃС‚РІРµ РґРѕР±Р°РІРєРё РІ Р°СЂРѕРјР°С‚РёР·Р°С‚РѕСЂС‹, СЃС‚Р°Р±РёР»РёР·Р°С‚РѕСЂС‹, Р·Р°РіСѓСЃС‚РёС‚РµР»Рё Рё РґСЂСѓРіРёРµ РєРѕРјРїРѕРЅРµРЅС‚С‹, РєРѕС‚РѕСЂС‹Рµ РёСЃРїРѕР»СЊР·СѓСЋС‚СЃСЏ РІ РїРёС‰РµРІРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё;</li>
+					<li>РљР°Рє РєРѕРјРїРѕРЅРµРЅС‚ РІ С…Р»РµР±РѕР±СѓР»РѕС‡РЅС‹С… РёР·РґРµР»РёСЏС…;</li>
+					<li>Р’ РјР°СЃР»РѕР¶РёСЂРѕРІРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё РґР»СЏ РёР·РіРѕС‚РѕРІР»РµРЅРёСЏ СЃР»РёРІРѕС‡РЅРѕРіРѕ РјР°СЃР»Р° Рё РєРѕРјР±РёРЅРёСЂРѕРІР°РЅРЅС‹С… РјР°СЃРµР», РІ СЃРѕСЃС‚Р°РІ РєРѕС‚РѕСЂС‹С… РІС…РѕРґСЏС‚ СЂР°СЃС‚РёС‚РµР»СЊРЅС‹Рµ Рё Р¶РёРІРѕС‚РЅС‹Рµ Р¶РёСЂС‹;</li>
+					<li>Р”Р»СЏ РїСЂРёРіРѕС‚РѕРІР»РµРЅРёСЏ РіРѕС‚РѕРІС‹С… РєРѕСЂРјРѕРІ РґР»СЏ РґРѕРјР°С€РЅРёС… Р¶РёРІРѕС‚РЅС‹С… РІ СЃРµР»СЊСЃРєРѕРј С…РѕР·СЏР№СЃС‚РІРµ;</li>
+					<li>Р”Р»СЏ РїСЂРёРіРѕС‚РѕРІР»РµРЅРёСЏ РјРѕР»РѕС‡РЅС‹С… РЅР°РїРёС‚РєРѕРІ;</li>
+					<li>Р’ Р°Р»РєРѕРіРѕР»СЊРЅРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё РґР»СЏ РїСЂРёРіРѕС‚РѕРІР»РµРЅРёСЏ РЅР°РїРёС‚РєРѕРІ РЅР° РѕСЃРЅРѕРІРµ РјРѕР»РѕРєР°;</li>
+					<li>Р”Р»СЏ РёР·РіРѕС‚РѕРІР»РµРЅРёСЏ РїР»Р°РІР»РµРЅС‹С… СЃС‹СЂРѕРІ, РіР»Р°Р·РёСЂРѕРІР°РЅРЅС‹С… СЃС‹СЂРєРѕРІ Рё РґСЂСѓРіРѕР№ РїРѕРґРѕР±РЅРѕР№ РїСЂРѕРґСѓРєС†РёРё;</li>
+					<li>Р’ РјСЏСЃРЅРѕР№ РїСЂРѕРјС‹С€Р»РµРЅРЅРѕСЃС‚Рё РґР»СЏ РёР·РіРѕС‚РѕРІР»РµРЅРёСЏ РєРѕРЅСЃРµСЂРІРѕРІ;</li>
+					<li>Р”Р»СЏ РїСЂРёРіРѕС‚РѕРІР»РµРЅРёСЏ Р·Р°РјРѕСЂРѕР¶РµРЅРЅС‹С… РїСЂРѕРґСѓРєС‚РѕРІ Рё РїРѕР»СѓС„Р°Р±СЂРёРєР°С‚РѕРІ;</li>
+					<li>Р’ Р·Р°РІРµРґРµРЅРёСЏС… РѕР±С‰РµСЃС‚РІРµРЅРЅРѕРіРѕ РїРёС‚Р°РЅРёСЏ РґР»СЏ РїСЂРёРіРѕС‚РѕРІР»РµРЅРёСЏ СЃСѓРїРѕРІ, Р·Р°РєСѓСЃРѕРє, РєСЂРµРјРѕРІ, СЃРѕСѓСЃРѕРІ Рё РіРѕС‚РѕРІС‹С… Р±Р»СЋРґ СЃ Р±РѕР»СЊС€РёРј РєРѕР»РёС‡РµСЃС‚РІРѕРј РєРѕРјРїРѕРЅРµРЅС‚РѕРІ.</li>
 				</ul>
-				<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
-				<p id="sh2">Материал взят с источников:</p>
+				<p id="soderzhanie"><a href="index.html"><u>РќР° РіР»Р°РІРЅСѓСЋ</u></a></p>
+				<p id="sh2">РњР°С‚РµСЂРёР°Р» РІР·СЏС‚ СЃ РёСЃС‚РѕС‡РЅРёРєРѕРІ:</p>
 				<nav>
 					<ul id="sh1">
 						<li><a href="https://www.syl.ru/article/203510/new_suhoe-obezjirennoe-moloko-kontsentrat-zdorovya">https://www.syl.ru/article/203510/new_suhoe-obezjirennoe-moloko-kontsentrat-zdorovya</a></li>
@@ -66,7 +67,7 @@
 			</div>
 		</article>
 		<footer>
-			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
+			&copy;Р РѕРјР°РЅ РўСЂРѕС€РёРЅ. Р§РµР»СЏР±РёРЅСЃРє - 2019. РЎР°Р№С‚ РІРёР·РёС‚РєР° &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">РќР°РїРёСЃР°С‚СЊ РјРЅРµ</a>
 		</footer>
 	</div>
 </body>
