--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<h2>МОЛОКО СУХОЕ ОБЕЗЖИРЕННОЕ</h2>
 				<p>Обезжиренное сухое молоко - это порошок белого или кремового цвета, получаемый путем высушивания обезжиренного коровьего молока...</p>
 				<div id="soderzhanie">
-					<a href="SOMAbout.html">ПОСМОТРЕТЬ ПОЛНОЕ ОПИСАНИЕ</a>
+					<a href="somabout.html">ПОСМОТРЕТЬ ПОЛНОЕ ОПИСАНИЕ</a>
 				</div>
 			</nav>
 			<h5><em>А ТАКЖЕ</em></h5>
