--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Êîíòàêòû</title>
-	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-	<meta content="Îïòîâàÿ ïðîäàæà ñóõîãî öåëüíîãî è ñóõîãî îáåçæèðåííîãî ìîëîêà" name="description">
+	<title>Контакты</title>
+	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Ïîñòàâùèê ñûðüÿ äëÿ ïèùåâîãî ïðîèçâîäñòâà</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Ãëàâíàÿ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Ïðàéñ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="contact.html">Êîíòàêòû</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">Î íàñ</a>
+				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
 			</nav>
 		</div>
 		<div id="of1">
 			<div id="sidebar">
-				<h1>Êîíòàêòû</h1>
+				<h1>Контакты</h1>
 			</div>
 			<article>
-				<h3>Êîíòàêòíûå òåëåôîíû:</h3>
+				<h3>Контактные телефоны:</h3>
 				<div id="of2">
 					<p id="soderzhanie"><strong>+7 900-082-41-23</strong></p>
 					<p id="soderzhanie"><strong>+7 967-863-56-04</strong></p>
-					<h3>Àäðåñ:</h3>
+					<h3>Адрес:</h3>
 					<p id="sh1"></p>
-					<p id="soderzhanie"><strong>Ìàñëîáàçîâàÿ, 6</strong></p>
-					<p id="soderzhanie"><strong>Ñîâåòñêèé ðàéîí, ×åëÿáèíñê, 454045</strong></p>
+					<p id="soderzhanie"><strong>Маслобазовая, 6</strong></p>
+					<p id="soderzhanie"><strong>Советский район, Челябинск, 454045</strong></p>
 					<div id="YMapsID" style="width:500px;height:400px">
 						<script async charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A37d7932eccbab7ad35743583a5523f676457168ca68dde970768f545f0e57287&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true;" type="text/javascript"></script>			
 					</div>
 					<p id="sh1"></p>
-					<p id="soderzhanie"><a href="index.html"><u>Íà ãëàâíóþ</u></a></p>
+					<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
 				</div>
 			</article>
 		</div>
 		<footer>
-			&copy;Ðîìàí Òðîøèí. ×åëÿáèíñê - 2019. Ñàéò âèçèòêà &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Íàïèñàòü ìíå</a>
+			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
 		</footer>
 	</div>
 </body>
-</html>
+</html>		
