--- a/price.html
+++ b/price.html
@@ -1,98 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ïðàéñ ëèñò</title>
-	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-	<meta content="Îïòîâàÿ ïðîäàæà ñóõîãî öåëüíîãî è ñóõîãî îáåçæèðåííîãî ìîëîêà" name="description">
+	<title>Прайс лист</title>
+	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Ïîñòàâùèê ñûðüÿ äëÿ ïèùåâîãî ïðîèçâîäñòâà</strong></marquee>
+			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
 		</header>
 		<div id="menu">
 			<nav>
-				<a href="index.html">Ãëàâíàÿ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="price.html">Ïðàéñ</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Êîíòàêòû</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">Î íàñ</a>
+				<a href="index.html">Главная</a>&nbsp; &nbsp; &nbsp; &nbsp;<a class="active" href="price.html">Прайс</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="contact.html">Контакты</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="about.html">О нас</a>
 			</nav>
 		</div>
 		<div id="of1">
 			<div id="sidebar">
-				<h1>Ïðàéñ-ëèñò</h1>
+				<h1>Прайс-лист</h1>
 			</div>
 			<article>
 				<div id="of2">
 					<table border="2" cellpadding="1" id="table" width="100%">
 						<tr>
-							<th align="center">Íàèìåíîâàíèå</th>
-							<th>Ñòðàíà ïðîèçâîäñòâà</th>
-							<th>Ôàñîâêà (êã)</th>
-							<th>Ñðîê õðàíåíèÿ</th>
-							<th>Öåíà</th>
+							<th align="center">Наименование</th>
+							<th>Страна производства</th>
+							<th>Фасовка (кг)</th>
+							<th>Срок хранения</th>
+							<th>Цена</th>
 						</tr>
 						<tr>
-							<td colspan="5" align="center"><strong>Ñóõîå îáåçæèðåííîå ìîëîêî ÃÎÑÒ</strong></td>
+							<td colspan="5" align="center"><strong>Сухое обезжиренное молоко ГОСТ</strong></td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå îáåçæèðåííîå ìîëîêî 1,5% Ãîìåëü, Âèòåáñê, Âîëîæèí, Êë¸öê</td>
-							<td>Áåëàðóñü</td>
+							<td align="left">Сухое обезжиренное молоко 1,5% Гомель, Витебск, Воложин, Клёцк</td>
+							<td>Беларусь</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
+							<td>24 мес</td>
 							<td>170</td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå îáåçæèðåííîå ìîëîêî 1,5%</td>
-							<td>Ðîññèÿ</td>
+							<td align="left">Сухое обезжиренное молоко 1,5%</td>
+							<td>Россия</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
+							<td>24 мес</td>
 							<td>175</td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå îáåçæèðåííîå ìîëîêî  äî 1,25% La Serenisima (Mastellone)</td>
-							<td>Àðãåíòèíà</td>
+							<td align="left">Сухое обезжиренное молоко  до 1,25% La Serenisima (Mastellone)</td>
+							<td>Аргентина</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
+							<td>24 мес</td>
 							<td>195</td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå îáåçæèðåííîå ìîëîêî äî 1,5% Cremo SA</td>
-							<td>Øâåéöàðèÿ</td>
+							<td align="left">Сухое обезжиренное молоко до 1,5% Cremo SA</td>
+							<td>Швейцария</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
-							<td>ïî çàïðîñó</td>
+							<td>24 мес</td>
+							<td>по запросу</td>
 						</tr>
 						<tr>
-							<td colspan="5" align="center"><strong>Ñóõîå öåëüíîå ÃÎÑÒ</strong></td>
+							<td colspan="5" align="center"><strong>Сухое цельное ГОСТ</strong></td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå öåëüíîå ìîëîêî 25% Ãîìåëü, ÃÎÑÒ</td>
-							<td>Áåëàðóñü</td>
+							<td align="left">Сухое цельное молоко 25% Гомель, ГОСТ</td>
+							<td>Беларусь</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
+							<td>24 мес</td>
 							<td>270</td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå öåëüíîå ìîëîêî 26% Fonterra</td>
-							<td>Àðãåíòèíà</td>
+							<td align="left">Сухое цельное молоко 26% Fonterra</td>
+							<td>Аргентина</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
+							<td>24 мес</td>
 							<td>270</td>
 						</tr>
 						<tr>
-							<td align="left">Ñóõîå öåëüíîå ìîëîêî 26% </td>
-							<td>Óðóãâàé</td>
+							<td align="left">Сухое цельное молоко 26% </td>
+							<td>Уругвай</td>
 							<td>25</td>
-							<td>24 ìåñ</td>
+							<td>24 мес</td>
 							<td>270</td>
 						</tr>
 					</table>
-					<h3 id="dwlprice"><a href="files/price.xlsx">Ñêà÷àòü ïîëíûé ïðàéñ-ëèñò âñåé ïðîäóêöèè.</a></h3>
-					<p id="soderzhanie"><a href="index.html"><u>Íà ãëàâíóþ</u></a></p>
+					<h3 id="dwlprice"><a href="files/price.xlsx">Скачать полный прайс-лист всей продукции.</a></h3>
+					<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
 				</div>
 			</article>
 		</div>
 		<footer>
-			&copy;Ðîìàí Òðîøèí. ×åëÿáèíñê - 2019. Ñàéò âèçèòêà &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Íàïèñàòü ìíå</a>
+			&copy;Роман Трошин. Челябинск - 2019. Сайт визитка &nbsp;<span class="separator">|</span>&nbsp; <a href="mailto:tromn@mail.ru">Написать мне</a>
 		</footer>
 	</div>
 </body>
