--- a/price.html
+++ b/price.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Прайс лист</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
