--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Оптовая продажа сухого молока</title>
-	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<meta name="yandex-verification" content="40ff5cce237fbc2a" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 	<meta content="Оптовая продажа сухого цельного и сухого обезжиренного молока" name="description">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
