--- a/price.html
+++ b/price.html
@@ -23,7 +23,7 @@
 			<article>
 				<div id="of2">
 					<table border="2" cellpadding="1" id="table" width="100%">
-						<tr>
+						<tr id = "shrcentr">
 							<th align="center">Наименование</th>
 							<th>Страна производства</th>
 							<th>Фасовка (кг)</th>
