--- a/price.html
+++ b/price.html
@@ -24,7 +24,7 @@
 				<div id="of2">
 					<table border="2" cellpadding="1" id="table" width="100%">
 						<tr id = "shrcentr">
-							<th align="center">Наименование</th>
+							<th>Наименование</th>
 							<th>Страна производства</th>
 							<th>Фасовка (кг)</th>
 							<th>Срок хранения</th>
