--- a/price.html
+++ b/price.html
@@ -33,28 +33,28 @@
 						<tr>
 							<td colspan="5" align="center"><strong>Сухое обезжиренное молоко ГОСТ</strong></td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое обезжиренное молоко 1,5% Гомель, Витебск, Воложин, Клёцк</td>
 							<td>Беларусь</td>
 							<td>25</td>
 							<td>24 мес</td>
 							<td>170</td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое обезжиренное молоко 1,5%</td>
 							<td>Россия</td>
 							<td>25</td>
 							<td>24 мес</td>
 							<td>175</td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое обезжиренное молоко  до 1,25% La Serenisima (Mastellone)</td>
 							<td>Аргентина</td>
 							<td>25</td>
 							<td>24 мес</td>
 							<td>195</td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое обезжиренное молоко до 1,5% Cremo SA</td>
 							<td>Швейцария</td>
 							<td>25</td>
@@ -64,21 +64,21 @@
 						<tr>
 							<td colspan="5" align="center"><strong>Сухое цельное ГОСТ</strong></td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое цельное молоко 25% Гомель, ГОСТ</td>
 							<td>Беларусь</td>
 							<td>25</td>
 							<td>24 мес</td>
 							<td>270</td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое цельное молоко 26% Fonterra</td>
 							<td>Аргентина</td>
 							<td>25</td>
 							<td>24 мес</td>
 							<td>270</td>
 						</tr>
-						<tr>
+						<tr id = "shrcentr">
 							<td align="left">Сухое цельное молоко 26% </td>
 							<td>Уругвай</td>
 							<td>25</td>
