--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 					<p id="soderzhanie"><strong>Маслобазовая, 6</strong></p>
 					<p id="soderzhanie"><strong>Советский район, Челябинск, 454045</strong></p>
 					<div id="YMapsID" style="width:500px;height:400px">
-						<script async charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A37d7932eccbab7ad35743583a5523f676457168ca68dde970768f545f0e57287&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true;" type="text/javascript"></script>			
+					       <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A37d7932eccbab7ad35743583a5523f676457168ca68dde970768f545f0e57287&amp;width=900&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>
 					<p id="sh1"></p>
 					<p id="soderzhanie"><a href="index.html"><u>На главную</u></a></p>
