--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<h1>Поставщик сырья для пищевого производства</h1>
 		</header>
 		<div id="menu">
 			<nav>
@@ -19,7 +19,7 @@
 
 		<div id="of1">
 			<div id="sidebar">
-				<h1>О компании</h1>
+				<h2 id = "zagolovok">О компании</h2>
 			</div>
 			<article id="of3">
 				<p id="sh1">
