--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<h1>Поставщик сырья для пищевого производства</h1>
 		</header>
 		<div id="menu">
 			<nav>
@@ -18,7 +18,7 @@
 			</nav>
 		</div>
 		<div id="sidebar">
-			<h1>Оптовая продажа сухого молока</h1>
+			<h2 id = "zagolovok">>Оптовая продажа сухого молока</h2>
 		</div>
 		<article>
 			<img align="center-right" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="350" hspace="0" src="images/molokogif.gif" vspace="0" width="500"><img align="center-right-side" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="350" hspace="0" src="images/moloko5.jpg" vspace="0" width="500">
