--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</nav>
 		</div>
 		<div id="sidebar">
-			<h2 id = "zagolovok">>Оптовая продажа сухого молока</h2>
+			<h2 id = "zagolovok">Оптовая продажа сухого молока</h2>
 		</div>
 		<article>
 			<img align="center-right" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="350" hspace="0" src="images/molokogif.gif" vspace="0" width="500"><img align="center-right-side" alt="МОЛОКО СУХОЕ ЦЕЛЬНОЕ" height="350" hspace="0" src="images/moloko5.jpg" vspace="0" width="500">
