--- a/price.html
+++ b/price.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<h1>Поставщик сырья для пищевого производства</h1>
 		</header>
 		<div id="menu">
 			<nav>
@@ -18,7 +18,7 @@
 		</div>
 		<div id="of1">
 			<div id="sidebar">
-				<h1>Прайс-лист</h1>
+				<h2 id = "zagolovok">Прайс-лист</h2>
 			</div>
 			<article>
 				<div id="of2">
