--- a/somabout.html
+++ b/somabout.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<header>
-			<marquee loop="1" behavior="slide"><strong>Поставщик сырья для пищевого производства</strong></marquee>
+			<h1>Поставщик сырья для пищевого производства</h1>
 		</header>
 		<div id="menu">
 			<nav>
@@ -17,7 +17,7 @@
 			</nav>
 		</div>
 		<div id="sidebar">
-			<h1>МОЛОКО СУХОЕ ОБЕЗЖИРЕННОЕ</h1>
+			<h2 id = "zagolovok">МОЛОКО СУХОЕ ОБЕЗЖИРЕННОЕ</h2>
 		</div>
 		
 		<article>
