--- a/scmabout.html
+++ b/scmabout.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<header>
-			<h1><strong>Поставщик сырья для пищевого производства</h1>
+			<h1>Поставщик сырья для пищевого производства</h1>
 		</header>
 		<div id="menu">
 			<nav>
